--- a/index.html/index.html
+++ b/index.html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css/style.css">
 </head>
 <body>
+    <h1>Hello world</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
